--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
   	<%= render partial: 'layouts/navbar'%>
+    <%= render 'shared/flash_messages' %>
     <%= yield %>
   </body>
 </html>
