--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
   <body>
   	<%= render partial: 'layouts/navbar'%>
-    <%= render 'shared/flash_messages' %>
+    <%= render 'layouts/messages' %>
+    <%= render partial: 'shared/flash_messages' %>
     <%= yield %>
   </body>
 </html>
