signup/signin done

--- a/app/views/layouts/_itemviewer.html.erb
+++ b/app/views/layouts/_itemviewer.html.erb
@@ -32,8 +32,11 @@
           </blockquote>
 
           <br>
-          <%= link_to 'Rent', item_path(item), class: 'btn btn-success', data:{confirm: "Are you sure?"} %>
-          <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-warning' %>
+          <% if user_signed_in? %>
+            <%= link_to 'Rent', item_path(item), class: 'btn btn-success', data:{confirm: "Are you sure?"} %>
+            <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-warning' %>
+          <% end %>
+
         </div>
       </div>
     </div>
