--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,26 +1,27 @@
 <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-         <a class="navbar-brand" href="/">OtakuNepal</a>
+          <%= image_tag "brand.png", class: "bimage" %>
+          <a class="navbar-brand bname" href="/">OtakuNepal</a>
         </div>
 
-        <div class= "nav_links pull-right" style="margin-right: 50px; margin-top: 10px">
-        	 <% if user_signed_in? %>
-          <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              <%= current_user.username %>
-              <span class="caret"></span>
-            </button>
-               <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <br>
-                <li><span class="prof_opt"><%= link_to 'New Post', new_item_path %></span></li><br><br>
-                <li><span class="prof_opt><%= link_to 'Edit Settings', edit_user_registration_path %></span></li><br><br>
-                <li><span class="prof_opt"><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></span></li><br><br>
-                
-              <% else %>
-                <span class="nav_links pull-right"><%= link_to 'Sign Up', new_user_registration_path %></span>
-                <span class="nav_links pull-right"><%= link_to 'Log In', new_user_session_path %></span>
-          </div>
+        <div class= "nav_links pull-right" style="margin-right: 5px; margin-top: 10px">
+        	<% if user_signed_in? %>
+              <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <%= current_user.username %>
+                  <span class="caret"></span>
+                </button>
+                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <br>
+                    <li><span class="prof_opt"><%= link_to 'New Post', new_item_path %></span></li><br><br>
+                    <li><span class="prof_opt"><%= link_to 'Edit Settings', edit_user_registration_path %></span></li><br><br>
+                    <li><span class="prof_opt"><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></span></li><br><br>
+                    
+                  <% else %>
+                    <span class="nav_links pull-right"><%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary' %></span>
+                    <span class="nav_links pull-right", style = "margin-right: 5px"><%= link_to 'Log In', new_user_session_path, class: 'btn btn-primary'  %></span>
+              </div>
   	    <% end %>
         </div>
       </div>
