--- a/app/views/layouts/_itemviewer.html.erb
+++ b/app/views/layouts/_itemviewer.html.erb
@@ -24,7 +24,7 @@
                 <div id="collapse_<%= j %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
                     <%= item.item_detail %>
-                    <%= link_to 'More...'%>
+                    <%= link_to 'Click here for images...', item_path(item.id)%>
                   </div>
                 </div>
               </div>
