--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <%= image_tag "brand.png", class: "bimage" %>
-          <a class="navbar-brand bname" href="/">OtakuNepal</a>
+          <a class="visible-md-block visible-lg-block navbar-brand bname" href="/">OtakuNepal</a>
         </div>
 
         <div class= "nav_links pull-right" style="margin-right: 5px; margin-top: 10px">
@@ -22,7 +22,7 @@
                     <span class="nav_links pull-right"><%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary' %></span>
                     <span class="nav_links pull-right", style = "margin-right: 5px"><%= link_to 'Log In', new_user_session_path, class: 'btn btn-primary'  %></span>
               </div>
-  	    <% end %>
+  	      <% end %>
         </div>
       </div>
   </nav>
