--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <%= image_tag "brand.png", class: "bimage" %>
-          <a class="visible-md-block visible-lg-block navbar-brand bname" href="/">OtakuNepal</a>
+          <a class="navbar-brand bname" href="/">OtakuNepal</a>
         </div>
 
         <div class= "nav_links pull-right" style="margin-right: 5px; margin-top: 10px">
