--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -1,9 +1,3 @@
-<%if user_signed_in?%>
-  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal", style= "margin-bottom: 20px">
-    Add Items
-  </button>
-<%end%>
-
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -18,7 +12,7 @@
               <%= f.input :item_detail%>
               <%= f.input :item_price %>
               <%= f.label 'Item Picture' %><br>
-              <%= f.file_field :photo %>
+              <%= f.file_field :photos, multiple: true, accept: "image/jpeg, image/jpg, image/gif, image/png" %>
           </div>
           <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
