--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,10 +1,12 @@
 <div class = "container">
 	<div class = "col-xs-12 col-md-12 col-offset-md-3">
 		<div class = "panel panel-default iDetails">
-			<% @item.photos do |i| %>
+			<% @item.photos.each do |i| %>
 				<%= image_tag @item.photos[i].url %>
 			<% end %>
-				
+				<%= image_tag @item.photos[0].url %>
+				<%= image_tag @item.photos[1].url %>
+				<%= image_tag @item.photos[2].url %>
 				<h1> Hello </h1>
 			
 		</div>
