--- a/app/views/layouts/_itemviewer.html.erb
+++ b/app/views/layouts/_itemviewer.html.erb
@@ -38,12 +38,12 @@
           <% if user_signed_in? %>
             <% if item.user != current_user %>
               <%= link_to 'Rent', '#rentModal', class: 'btn btn-success', "data-toggle" => "modal", "data-target" => "#rentModal"%>
-              <%= render partial: "layouts/rentModal"%>
+              <%= render partial: "layouts/rent_modal"%>
             <% end %>
 
             <% if item.user == current_user %>
               <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-warning' %>
-              <%= link_to 'Delete', item_path(item), class: 'btn btn-danger' %>
+              <%= link_to 'Delete', item_path(item), class: 'btn btn-danger', method: :delete %>
             <% end %>
 
           <% end %>
