--- a/app/views/layouts/_itemviewer.html.erb
+++ b/app/views/layouts/_itemviewer.html.erb
@@ -39,7 +39,7 @@
           
             <% if item.user != current_user %>
               <%= link_to 'Rent', '#rentModal', class: 'btn btn-success', "data-toggle" => "modal", "data-target" => "#rentModal"%>
-              <%= render partial: "layouts/rent_modal"%>
+              <%= render partial: "layouts/rent_modal", locals: { current_item: item } %>
             <% end %>
 
             <% if item.user == current_user %>
