--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,57 +1,66 @@
-<h2>Sign up</h2>
+<div class = "row">
+  <div class = "col-md-7 text-center">
+    <div class = "banner-image">
+      <%= image_tag("front.png", alt: 'Banner', :class => "signup-image") %>
+    </div>
+  </div>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-<!--   <%= f.error_notification %>
- -->
- <%= devise_error_messages! %>
-  <div class="form-inputs">
+  <div class = "col-md-2 text-center signup-form">
+  
+    <div class = "text-signup">  
+      <h2>Sign up</h2>
+    </div><br/>
 
-      <div class = "fields">
-        <%= f.label :FirstName %><br>
-        <%= f.text_field :FirstName, required: true, autofocus: true %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <!--   <%= f.error_notification %>
+     -->
+     <%= devise_error_messages! %>
+      <div class="form-inputs">
+
+          <div class = "fields">
+            <%= f.text_field :FirstName, class: 'input-from', required: true, autofocus: true, placeholder: "FirstName" %>
+          </div>
+
+          <div class = "fields">
+            <%= f.text_field :LastName, class: 'input-from', required: true, autofocus: false, placeholder: "LastName" %>
+          </div>
+
+          <div class = "fields">
+            <%= f.email_field :email, class: 'input-from', required: true, autofocus: true, placeholder: "Email" %>
+          </div>
+
+          <div class = "fields">
+            <%= f.text_field :username, class: 'input-from', required: true, autofocus: true, placeholder: "Username" %>
+          </div>
+
+          <div class = "fields">
+            <%= f.telephone_field :mobile, class: 'input-from', input_html: {max: 10, min: 10}, required: true, autofocus: false, placeholder: "Mobile" %>
+          </div>
+
+          <div class = "fields">
+            <%= f.password_field :password, class: 'input-from', required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), placeholder: "Password" %>
+          </div>
+
+          <div class = "fields">
+            <%= f.password_field :password_confirmation, class: 'input-from', autofocus: false, required: true, placeholder: "Confirm Password" %>
+          </div>
+
+          <br/>
+          <div class = "fields">
+            <%= f.label 'Profile Picture' %><br>
+            <%= f.file_field :photo, class: 'input-from' %>
+
       </div>
 
-      <div class = "fields">
-        <%= f.label :LastName %><br>
-        <%= f.text_field :LastName, required: true, autofocus: false %>
+      <br/>
+      <div class="form-actions">
+        <%= f.submit "Sign up", class: 'signup-button' %>
       </div>
 
-      <div class = "fields">
-        <%= f.label :email %><br>
-        <%= f.email_field :email, required: true, autofocus: true %>
-      </div>
+    <% end %>
 
-      <div class = "fields">
-        <%= f.label :username %><br>
-        <%= f.text_field :username, required: true, autofocus: true %>
-      </div>
-
-      <div class = "fields">
-        <%= f.label :mobile %><br>
-        <%= f.telephone_field :mobile, input_html: {max: 10, min: 10}, required: true, autofocus: false %>
-      </div>
-
-      <div class = "fields">
-        <%= f.label :password %><br>
-        <%= f.password_field :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-      </div>
-
-      <div class = "fields">
-        <%= f.label :password_confirmation %><br>
-        <%= f.password_field :password_confirmation, autofocus: false, required: true %>
-      </div>
-
-      <div class = "fields">
-        <%= f.label 'Profile Picture' %><br>
-        <%= f.file_field :photo %>
-      </div>
+    <%= render "devise/shared/links" %>
 
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
