Login Page redone

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div class = "row">
-  <div class = "col-md-7 text-center">
+  <div class = "col-md-7 hidden-xs text-center">
     <div class = "banner-image">
       <%= image_tag("front.png", alt: 'Banner', :class => "signup-image") %>
     </div>
   </div>
 
-  <div class = "col-md-2 text-center signup-form">
+  <div class = "col-md-2 col-xs-12 text-center signup-form">
   
     <div class = "text-signup">  
       <h2>Sign up</h2>
