rollback changes in rent_view

--- a/app/views/layouts/_itemviewer.html.erb
+++ b/app/views/layouts/_itemviewer.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+  <div class="row">
   <% @items.each_with_index do |item, j| %>
     <div class="col-xs-12 col-sm-6 col-md-4">
       <div class="panel panel-default">
@@ -38,9 +38,11 @@
           <% if user_signed_in? %>
           
             <% if item.user != current_user %>
-              <%= link_to 'Rent', '#rentModal', class: 'btn btn-success', "data-toggle" => "modal", "data-target" => "#rentModal"%>
-              <%= render partial: "layouts/rent_modal", locals: {current_item: item } %>
+              <%= link_to 'Rent', "#rentModal", class: 'btn btn-success', "data-toggle" => "modal", "data-target" => "#rentModal"%>
+              <%= render partial: "layouts/rent_modal", locals: {current_item: item} %>
             <% end %>
+
+          <!-- button for edit and delete -->
 
             <% if item.user == current_user %>
               <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-warning' %>
