usernames shown in show bid

--- a/app/views/acquiretimes/index.html.erb
+++ b/app/views/acquiretimes/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="allBids">
 
 		<span class="user">
-			<strong> Bided By </strong>	: 	<%= i.user_id %>
+			<strong> Bided By </strong>	: 	<%= i.user.username %>
 		</span>
 
 		<span class="required">
