--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,6 +2,10 @@
 	<div class = "container">
 		<div class = "col-xs-12 col-md-12 col-offset-md-3">
 			<div class = "panel panel-default iDetails">
+				<div>
+					Owned by: <%= @item.user.username%>
+				</div>
+
 				<% @item.photos.each do |i| %>
 					<div class = "thumb_image">
 						<%= image_tag i.url, :class => "thumbnail_item_image" %>
